[package]
name = "nethsm-sdk-rs"
version = "0.3.0"
authors = ["Nitrokey <info@nitrokey.com>"]
description = "All endpoints expect exactly the specified JSON. Additional properties will cause a Bad Request Error (400). All HTTP errors contain a JSON structure with an explanation of type string. All [base64](https://tools.ietf.org/html/rfc4648#section-4) encoded values are Big Endian. "
license = "MIT"
edition = "2018"
exclude = [
  "generator/*",
  "docs/*",
  ".openapi-generator/*",
  ".openapi-generator-ignore",
  "generator_conf.yaml",
  "update_openapi.sh",
]

[dependencies]
serde = { default-features = false, version = "^1.0" }
serde_derive = "^1.0"
serde_json = { default-features = false, version = "^1.0" }
url = "^2.2"
ureq = { version = "2", features = ["json", "tls"], default-features = false }
base64 = { version = "0.21", default-features = false }
