[package]
name = "nethsm-sdk-rs"
version = "1.0.0"
authors = ["Nitrokey <info@nitrokey.com>"]
description = "Rust SDK to communicate with Nitrokey NetHSM"
documentation = "https://docs.nitrokey.com/nethsm/"
homepage = "https://www.nitrokey.com/products/nethsm"
repository = "https://github.com/Nitrokey/nethsm-sdk-rs"
readme = "README.md"
license = "MIT"
edition = "2021"
exclude = [
  "generator/*",
  "docs/*",
  ".openapi-generator/*",
  ".openapi-generator-ignore",
  "generator_conf.yaml",
  "update_openapi.sh",
]

[dependencies]
serde = { default-features = false, version = "^1.0" }
serde_derive = "^1.0"
serde_json = { default-features = false, version = "^1.0" }
url = "^2.2"
ureq = { version = "2", features = ["json", "tls"], default-features = false }
base64 = { version = "0.21", default-features = false }
