[package]
name = "nethsm-sdk-rs"
version = "1.1.0"
authors = ["Nitrokey <info@nitrokey.com>"]
description = "Rust SDK to communicate with Nitrokey NetHSM"
documentation = "https://docs.nitrokey.com/nethsm/"
homepage = "https://www.nitrokey.com/products/nethsm"
repository = "https://github.com/Nitrokey/nethsm-sdk-rs"
readme = "README.md"
license = "MIT"
edition = "2021"
exclude = [
  "generator/*",
  "docs/*",
  ".openapi-generator/*",
  ".openapi-generator-ignore",
  "generator_conf.yaml",
  "update_openapi.sh",
]

[dependencies]
mime = "0.3"
multipart = { version = "0.18", default-features = false, features = ["client"] }
serde = { default-features = false, version = "^1.0" }
serde_derive = "^1.0"
serde_json = { default-features = false, version = "^1.0" }
url = "^2.2"
ureq = { version = "2", features = ["json", "tls"], default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

[dev-dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
rustainers = "0.12.0"
rustls = { version = "0.22.4" }
tokio = { version = "1.37.0", features = ["rt", "macros"] }
ureq = "=2.9.7"
